--- a/menu/about.html
+++ b/menu/about.html
@@ -35,6 +35,10 @@
         Now I'm studying hard for BCA<br> To take my skills beyond,<br> Creating games and more to come <br>Before this
         story's
         done.
+        
+        <br><br>
+        <span class="a">root@adi<span class="aa">:</span><span class="b">~</span><span class="c">$</span></span>
+        <div class="curse"></div>
     </div>
 
 </body>
