--- a/menu/archive.html
+++ b/menu/archive.html
@@ -59,6 +59,11 @@
             <li>Advance Ai In Unity Game Development</li>
             <li>Full Stack Web And Mobile Development</li>
         </div>
+        
+        <br><br>
+        <span class="a">root@adi<span class="aa">:</span><span class="b">~</span><span class="c">$</span></span>
+        <div class="curse"></div>
+        
     </div>
     <script src="main.js"></script>
 </body>
