--- a/menu/social.html
+++ b/menu/social.html
@@ -33,6 +33,10 @@
         <li><a href="https://github.com/aadityabhoyar">GitHub</a></li><br>
 
         Email : adityabhoyar.work@gmail.com
+        
+        <br><br>
+        <span class="a">root@adi<span class="aa">:</span><span class="b">~</span><span class="c">$</span></span>
+        <div class="curse"></div>
 
     </div>
 
