--- a/menu/social.html
+++ b/menu/social.html
@@ -30,11 +30,7 @@
         <br>
         <li><a href="https://www.linkedin.com/in/aditya-bhoyar-64a052238/">LinkedIn</a></li>
         <br>
-        <li><a href="https://github.com/aadityabhoyar">GitHub</a></li><br>
-
-        Email : adityabhoyar.work@gmail.com
-        
-        <br><br>
+        <li><a href="https://github.com/aadityabhoyar">GitHub</a></li><br><br>
         <span class="a">root@adi<span class="aa">:</span><span class="b">~</span><span class="c">$</span></span>
         <div class="curse"></div>
 
