--- a/menu/about.html
+++ b/menu/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Document</title>
+    <title>About</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <span class="a">root@adi<span class="aa">:</span><span class="b">~</span><span class="c">$</span>
         </span>
         cat about.txt
-        <br><br>
+        <br> <br>
 
         ─────█─▄▀█──█▀▄─█─────<br>
         ────▐▌──────────▐▌────<br>
@@ -35,12 +35,15 @@
         Now I'm studying hard for BCA<br> To take my skills beyond,<br> Creating games and more to come <br>Before this
         story's
         done.
-        
         <br><br>
-        <span class="a">root@adi<span class="aa">:</span><span class="b">~</span><span class="c">$</span></span>
-        <div class="curse"></div>
-    </div>
+        <span class="b">2023 Goal :<br></span>
+        <div class="goalText">
+            <li>Ai, Machine Learning And Neural Networking Using Python</li>
+            <li>Advance Ai In Unity Game Development</li>
+            <li>Full Stack Web And Mobile Development</li>
+        </div>
 
+    </div>
 </body>
 
 </html>
