--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="pro_grid">
                     <p class="text1">Jan 2023</p>
                     <div class="text2">
-                        <a class="link-underline" href="https://iyk.app">
+                        <a class="link-underline" href="https://play.google.com/store/apps/details?id=com.adityabhoyar.neosadventure">
                             Neo's Adventure: Puzzle Game
                             <span class="arrow">
                                 <span></span>
@@ -48,7 +48,7 @@
                 <div class="pro_grid">
                     <p class="text1">Dec 2022</p>
                     <div class="text2">
-                        <a class="link-underline" href="https://iyk.app">
+                        <a class="link-underline" href="https://github.com/aadityabhoyar/python-discord-bot-template">
                             Python Discord Bot Template
                             <span class="arrow">
                                 <span></span>
@@ -67,7 +67,7 @@
                 <div class="pro_grid">
                     <p class="text1">Nov 2022</p>
                     <div class="text2">
-                        <a class="link-underline" href="https://iyk.app">
+                        <a class="link-underline" href="https://github.com/aadityabhoyar/twitter-meme-bot-python">
                             Twitter Meme Bot Using Python
                             <span class="arrow">
                                 <span></span>
