--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         </span>
         cat aadityabhoyar.txt
         <br> <br>
-        <a href="/menu/about.html">
+        <a href="" style="position: relative;">
             <img src="https://pbs.twimg.com/profile_images/1645467191305986049/f5BMRR0k_400x400.jpg" alt=""
                 height="100">
+            <div class="message-bubble">sup!</div>
         </a>
         <br> <br>
         Hello, World!
@@ -32,7 +33,7 @@
                 <div class="pro_grid">
                     <p class="text1">Jan 2023</p>
                     <div class="text2">
-                        <a class="link-underline" href="https://play.google.com/store/apps/details?id=com.adityabhoyar.neosadventure">
+                        <a class="link-underline" href="https://iyk.app">
                             Neo's Adventure: Puzzle Game
                             <span class="arrow">
                                 <span></span>
@@ -48,7 +49,7 @@
                 <div class="pro_grid">
                     <p class="text1">Dec 2022</p>
                     <div class="text2">
-                        <a class="link-underline" href="https://github.com/aadityabhoyar/python-discord-bot-template">
+                        <a class="link-underline" href="https://iyk.app">
                             Python Discord Bot Template
                             <span class="arrow">
                                 <span></span>
@@ -67,7 +68,7 @@
                 <div class="pro_grid">
                     <p class="text1">Nov 2022</p>
                     <div class="text2">
-                        <a class="link-underline" href="https://github.com/aadityabhoyar/twitter-meme-bot-python">
+                        <a class="link-underline" href="https://iyk.app">
                             Twitter Meme Bot Using Python
                             <span class="arrow">
                                 <span></span>
@@ -115,6 +116,17 @@
             </div>
         </div>
     </div>
+
+    <script>
+        document.querySelector('a').addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector('.message-bubble').style.display = 'block';
+            setTimeout(function () {
+                document.querySelector('.message-bubble').style.display = 'none';
+
+            }, 2000); // Change the duration (in milliseconds) for how long the message bubble should be displayed
+        });
+    </script>
 </body>
 
 </html>
