--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <!--     <link rel="icon" type="image/x-png" href="/assets/logo.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
     <title>Aditya Bhoyar</title>
-    <script type="module" crossorigin src="/index.js"></script>
-    <link rel="stylesheet" crossorigin href="/index.css">
+    <script type="module" crossorigin src="index.js"></script>
+    <link rel="stylesheet" crossorigin href="index.css">
 </head>
 
 <body>
