--- a/index.html
+++ b/index.html
@@ -1,37 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-<!--     <link rel="icon" type="image/x-png" href="/assets/logo.png" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Bhoyar</title>
-    <script type="module" crossorigin src="main.js"></script>
-    <link rel="stylesheet" crossorigin href="style.css">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <main id="main">
-        <div id="terminal">
-            <div>
-                <span id="prompt"><span id="pre-user"></span>@<span id="pre-host"></span>:$ ~ </span>
-            </div>
-            <!-- command output will be inserted before #write-lines-->
-            <a id="write-lines"></a>
-        </div>
-        <div id="input-line">
-            <div>
-                <p id="input-hidden">
-                    <span id="prompt"><span id="user"></span>@<span id="host"></span>:$ ~
-                    </span>
-                    <input id="user-input" type="text" enterkeyhint="Enter" spellcheck="false" autocapitalize="none"
-                        autocomplete="off" />
-                </p>
-            </div>
-            <br>
-        </div>
-    </main>
-</body>
+    <div class="container">
+        <header>
+            <h2>Current Project</h2>
+            <blockquote class="twitter-tweet" data-media-max-width="560">
+                <a href="https://twitter.com/aadityabhoyarr/status/1805666631961788721?ref_src=twsrc%5Etfw">June 25,
+                    2024</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <p>Making a dark psychological horror game 😶‍🌫️</p>
+        </header>
 
+        <section>
+            <h2>About</h2>
+            <p>
+                Hey, I'm Aditya, a 21-year-old from India✨
+                <br>
+                I'm all about bringing my ideas to life through code.
+                <br>
+                Whether it's crafting cool games or random projects,
+                <br>
+                I'm all in.🤝
+                Let's chat tech and make some magic happen!
+            </p>
+        </section>
+        <section>
+            <h2>Social</h2>
+            <p>
+                Twitter / X: <a href="https://x.com/aadityabhoyarr">aadityabhoyarr</a> <br>
+                Github: <a href="https://github.com/aadityabhoyar">aadityabhoyar</a> <br>
+                LinkedIn: <a href="https://www.linkedin.com/in/aditya-bhoyar-64a052238">aditya bhoyar</a> <br>
+                Or just email me: <a href="mailto:adityabhoyar.work@gmail.com">adityabhoyar.work@gmail.com</a>
+            </p>
+        </section>
+        <section>
+            <h2>Project Archive</h2>
+            <p>
+                <a href="https://github.com/aadityabhoyar/Haystack-File-Hiding-System">Haystack File Hiding System
+                    (Python) </a><br>
+                <a href="https://play.google.com/store/apps/details?id=com.adityabhoyar.neosadventure">Neo's Adventure
+                    Puzzle Game (Unity . C#) </a><br>
+                <a href="https://play.google.com/store/apps/details?id=com.aadityabhoyarr.linzo">Linzo (Unity . C#)
+                </a><br>
+                <a href="">Hidden Eye: Secret Camera App (Flutter . Dart) </a><br>
+                <a href="https://github.com/aadityabhoyar?tab=repositories">etc.</a> ;)
+            </p>
+        </section>
+        <section>
+            <img src="https://pbs.twimg.com/profile_images/1805135991751254016/tYYaNi_5_400x400.jpg"
+                alt="Description of image">
+            <p><em>Last Updated on July 1, 2024 1:45 am </em>💖</p>
+        </section>
+    </div>
+</body>
 
 </html>
