--- a/index.html
+++ b/index.html
@@ -2,65 +2,110 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Bhoyar</title>
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
-</head>
+
+    <link rel="stylesheet" href="styles.css">
 
 <body>
-    <div class="container">
-        <header>
-            <h2>Current Project</h2>
-            <blockquote class="twitter-tweet" data-media-max-width="560">
-                <a href="https://twitter.com/aadityabhoyarr/status/1807677325280268752?ref_src=twsrc%5Etfw">July 1,
-                    2024</a>
-            </blockquote>
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <p>Making a dark psychological horror game 😶‍🌫️</p>
-        </header>
+    <div class="main-content-wrapper">
+        <div class="main-text-content">
+            <header>
+                <div class="header-content">
+                    <div class="text-content">
+                        <h1>Yo, I'm Aditya!</h1>
+                    </div>
+                </div>
+            </header>
 
-        <section>
-            <h2>About</h2>
-            <p>
-                Hey, I'm Aditya, a 21-year-old from India✨
-                <br>
-                I'm all about bringing my ideas to life through code.
-                <br>
-                Whether it's crafting cool games or random projects,
-                <br>
-                I'm all in.🤝
-                Let's chat tech and make some magic happen!
-            </p>
-        </section>
-        <section>
-            <h2>Social</h2>
-            <p>
-                Twitter / X: <a href="https://x.com/aadityabhoyarr">aadityabhoyarr</a> <br>
-                Github: <a href="https://github.com/aadityabhoyar">aadityabhoyar</a> <br>
-                LinkedIn: <a href="https://www.linkedin.com/in/aditya-bhoyar-64a052238">aditya bhoyar</a> <br>
-                Or just email me: <a href="mailto:adityabhoyar.work@gmail.com">adityabhoyar.work@gmail.com</a>
-            </p>
-        </section>
-        <section>
-            <h2>Project Archive</h2>
-            <p>
-                <a href="https://github.com/aadityabhoyar/Haystack-File-Hiding-System">Haystack File Hiding System
-                    (Python) </a><br>
-                <a href="https://play.google.com/store/apps/details?id=com.adityabhoyar.neosadventure">Neo's Adventure
-                    Puzzle Game (Unity . C#) </a><br>
-                <a href="https://play.google.com/store/apps/details?id=com.aadityabhoyarr.linzo">Linzo (Unity . C#)
-                </a><br>
-                <a href="">Hidden Eye: Secret Camera App (Flutter . Dart) </a><br>
-                <a href="https://github.com/aadityabhoyar?tab=repositories">etc.</a> ;)
-            </p>
-        </section>
-        <section>
-            <img src="https://pbs.twimg.com/profile_images/1805135991751254016/tYYaNi_5_400x400.jpg"
-                alt="Description of image">
-            <p><em>Last Updated on July 1, 2024 1:45 am </em>💖</p>
-        </section>
+            <main>
+                <section class="section">
+                    <h2>Who am I?</h2>
+                    <p>I'm a 21-year-old software engineer and game developer from India, recently graduated with a
+                        Bachelor of Computer Applications.</p>
+                    <p>My love for technology started young, but I didn’t dive into coding until I turned 16. Since
+                        then, I've been hooked—exploring the endless possibilities of programming and building projects
+                        that challenge and excite me. In 2018, I took the leap into game development, gradually leveling
+                        up my skills and passion for creating immersive experiences.
+                    </p>
+                    <!-- <blockquote class="quote">
+                        "The only true wisdom is in knowing you know nothing." - Socrates
+                    </blockquote> -->
+                </section>
+
+                <section class="section projects-section">
+                    <h2>Some of my Side-Projects</h2>
+                    <div class="projects-grid">
+                        <a href="https://github.com/aadityabhoyarr/Haystack-File-Hiding-System" class="project-card">
+                            <div class="project-content">
+                                <h3>Haystack File Hiding System</h3>
+                                <p>HFHS (Haystack File Hiding System) is designed to protect your important files by
+                                    hiding them within a complex maze of folders. Just like finding a needle in a
+                                    haystack </p>
+                            </div>
+                        </a>
+                        <a href="https://play.google.com/store/apps/details?id=com.adityabhoyar.neosadventure"
+                            class="project-card">
+                            <div class="project-content">
+
+                                <h3>Neo's Adventure Puzzle Game </h3>
+                                <p>It's a mobile puzzle game created using Unity, developed in just 69 days as part of a
+                                    challenge.</p>
+                            </div>
+                        </a>
+                        <a href="https://play.google.com/store/apps/details?id=com.aadityabhoyarr.linzo"
+                            class="project-card">
+                            <div class="project-content">
+
+                                <h3>Linzo</h3>
+                                <p>It's a casual mobile game created using Unity and developed in 12 hours as part of a
+                                    self-imposed challenge.</p>
+                            </div>
+                        </a>
+
+                    </div>
+                </section>
+
+                <section class="section current-work-section">
+                    <h2>Currently Working On<span class="animated-ellipsis"></span></h2><br>
+                    <i class="fas fa-code current-work-icon"></i>
+                    <h3>Still Behind</h3>
+                    <blockquote class="twitter-tweet" data-media-max-width="560">
+                        <p lang="en" dir="ltr">I&#39;ve been working solo on a dark, short survival horror game called
+                            &quot;Still Behind&quot; for the past 2 months.<br><br>Here&#39;s a short teaser of the game
+                            (Use 🎧)<br><br>Follow if you&#39;re interested... Coming soon...<a
+                                href="https://twitter.com/hashtag/indiegame?src=hash&amp;ref_src=twsrc%5Etfw">#indiegame</a>
+                            <a
+                                href="https://twitter.com/hashtag/indiedev?src=hash&amp;ref_src=twsrc%5Etfw">#indiedev</a>
+                            <a href="https://twitter.com/hashtag/gamedev?src=hash&amp;ref_src=twsrc%5Etfw">#gamedev</a>
+                            <a href="https://twitter.com/hashtag/gaming?src=hash&amp;ref_src=twsrc%5Etfw">#gaming</a> <a
+                                href="https://twitter.com/hashtag/gamer?src=hash&amp;ref_src=twsrc%5Etfw">#gamer</a> <a
+                                href="https://twitter.com/hashtag/gamedevelopment?src=hash&amp;ref_src=twsrc%5Etfw">#gamedevelopment</a>
+                            <a href="https://twitter.com/hashtag/indie?src=hash&amp;ref_src=twsrc%5Etfw">#indie</a> <a
+                                href="https://t.co/hYmRH6f2WT">pic.twitter.com/hYmRH6f2WT</a></p>&mdash; Aditya Bhoyar
+                        (@aadityabhoyarr) <a
+                            href="https://twitter.com/aadityabhoyarr/status/1838185542594232818?ref_src=twsrc%5Etfw">September
+                            23, 2024</a>
+                    </blockquote>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <p>Working solo on a dark, short survival horror game</p>
+                    <div class="work-details">
+                        <span class="status">In Progress: 15%</span>
+                    </div>
+                </section>
+            </main>
+
+            <section class="section">
+                <h2>Contact</h2>
+                <p>Email: adityabhoyar.work@gmail.com</p>
+                <p>GitHub: <a href="https://github.com/aadityabhoyarr">github.com/aadityabhoyarr</a></p>
+                <p>X: <a href="https://x.com/aadityabhoyarr">@aadityabhoyarr</a></p>
+                <p>Linkedin: <a href="https://www.linkedin.com/in/aditya-bhoyar-64a052238/">Aditya Bhoyar</a></p>
+            </section>
+        </div>
     </div>
+
 </body>
 
 </html>
