--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <main>
                 <section class="section">
                     <h2>Who am I?</h2>
-                    <p>I'm a 21-year-old software engineer and game developer from India, recently graduated with a
+                    <p>I'm a 21-year-old programmer and game developer from India, recently graduated with a
                         Bachelor of Computer Applications.</p>
                     <p>My love for technology started young, but I didn’t dive into coding until I turned 16. Since
                         then, I've been hooked—exploring the endless possibilities of programming and building projects
